--- a/ASP_Souvenirs/Views/Catalogue/Details.cshtml
+++ b/ASP_Souvenirs/Views/Catalogue/Details.cshtml
@@ -32,7 +32,8 @@
             @Html.DisplayNameFor(model => model.PathOfFile)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.PathOfFile)
+            @*@Html.DisplayFor(model => model.PathOfFile)*@
+            <img class="img-responsive" style="max-width: 150px;" src="@Url.Content("~/images/items/" + Model.PathOfFile)" alt="">
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Supplier)
@@ -49,6 +50,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.SouvenirID">Edit</a> |
+    @*<a asp-action="Edit" asp-route-id="@Model.SouvenirID">Edit</a> |*@
     <a asp-action="Index">Back to List</a>
 </div>
