--- a/ASP_Souvenirs/Views/Catalogue/Index.cshtml
+++ b/ASP_Souvenirs/Views/Catalogue/Index.cshtml
@@ -92,15 +92,15 @@
 <div class="col-md-9">
     @foreach (var item in Model)
     {
-        var imgUrl = @Href("~" + item.PathOfFile);
-        var errImg = @Href("~/Images/bag1.jpg");
+        //var imgUrl = @Href("~" + item.PathOfFile);
+        //var errImg = @Href("~/Images/bag1.jpg");
 
         <div class="col-md-2 col-m put_center">
             <!-- Item -->
             <div style="width: 154px; height:180px; display:table; background:#efefef; margin: 0 auto;">
                 <div style="display:table-cell; vertical-align: middle; ">
                     <a asp-action="Details" asp-route-id="@item.SouvenirID" class="offer-img">
-                        <img class="img-responsive" style="max-width: 154px; max-height:180px;" src="@imgUrl" alt="Bag Image" onerror="this.onerror = null; this.src = '@errImg'">
+                        <img class="img-responsive" style="max-width: 154px; max-height:180px;" src="@Url.Content("~/images/items/" + @item.PathOfFile)" alt="Bag Image">
                     </a>
                 </div>
             </div>
