--- a/ASP_Souvenirs/Views/Souvenirs/Create.cshtml
+++ b/ASP_Souvenirs/Views/Souvenirs/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -29,12 +29,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="PathOfFile" class="control-label"></label>
-                @*<input asp-for="PathOfFile" class="form-control" />
-                <span asp-validation-for="PathOfFile" class="text-danger"></span>*@
-                @*<div class="col-md-10">*@
-                    <input type="file" name="uploadFile" id="uploadFile" />
-                    <img id="img-preview" style="max-width: 300px;" class="img img-responsive" src="" />
-                @*</div>*@
+                <input type="file" name="uploadFile" id="uploadFile" />
+                <img id="img-preview" style="max-width: 150px;" class="img img-responsive" src="" />
             </div>
             <div class="form-group">
                 <label asp-for="CategoryID" class="control-label"></label>
