--- a/ASP_Souvenirs/Views/Souvenirs/Edit.cshtml
+++ b/ASP_Souvenirs/Views/Souvenirs/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="SouvenirID" />
             <div class="form-group">
@@ -33,7 +33,7 @@
                 @*<input asp-for="PathOfFile" class="form-control" />
         <span asp-validation-for="PathOfFile" class="text-danger"></span>*@
                 <input type="file" name="uploadFile" id="uploadFile" />
-                <img id="img-preview" style="max-width: 300px;" class="img img-responsive" src="" />
+                <img id="img-preview" style="max-width: 150px;" class="img img-responsive" src="@Url.Content("~/images/items/" + @Model.PathOfFile)" />
             </div>
             <div class="form-group">
                 <label asp-for="CategoryID" class="control-label"></label>
