--- a/ASP_Souvenirs/Views/Shared/_Layout.cshtml
+++ b/ASP_Souvenirs/Views/Shared/_Layout.cshtml
@@ -59,44 +59,47 @@
     <div class="container body-content">
         @RenderBody()
     </div>
+    <br />
+    <br />
+    <br />
     <!-- footer start -->
     @*<div class="container_wide">*@
-        <footer class="footer" style="margin-top: 200px; bottom: 0;">
-            <div class="container">
-                <div class="footer-left">
-                    <img src="~/images/home_images/quality_souvenirs_logo.png" width="180" alt="Quality Bags" />
+    <footer class="footer" style="margin-top: 200px; bottom: 0;">
+        <div class="container">
+            <div class="footer-left">
+                <img src="~/images/home_images/quality_souvenirs_logo.png" width="180" alt="Quality Bags" />
+            </div>
+
+            <div class="footer-center">
+
+                <div>
+                    <i class="fa fa-map-marker"></i>
+                    <p><span>Building 183, 139 Carrington Road </span>Mt Albert, Auckland, New Zealand</p>
                 </div>
 
-                <div class="footer-center">
-
-                    <div>
-                        <i class="fa fa-map-marker"></i>
-                        <p><span>Building 183, 139 Carrington Road </span>Mt Albert, Auckland, New Zealand</p>
-                    </div>
-
-                    <div>
-                        <i class="fa fa-phone"></i>
-                        <p>+64 0800 10 95 10</p>
-                    </div>
-
-                    <div>
-                        <i class="fa fa-envelope"></i>
-                        <p><a href="mailto:jearhub@gmail.com">support@qualitysouvenirs.co.nz</a></p>
-                    </div>
-
+                <div>
+                    <i class="fa fa-phone"></i>
+                    <p>+64 0800 10 95 10</p>
                 </div>
 
-                <div class="footer-right">
-                    <div class="footer-icons">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-tumblr"></i></a>
-                        <a href="#"><i class="fa fa-youtube"></i></a>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
-                    </div>
+                <div>
+                    <i class="fa fa-envelope"></i>
+                    <p><a href="mailto:jearhub@gmail.com">support@qualitysouvenirs.co.nz</a></p>
+                </div>
+
+            </div>
+
+            <div class="footer-right">
+                <div class="footer-icons">
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-tumblr"></i></a>
+                    <a href="#"><i class="fa fa-youtube"></i></a>
+                    <a href="#"><i class="fa fa-instagram"></i></a>
                 </div>
             </div>
-        </footer>  <!-- footer end-->
+        </div>
+    </footer>  <!-- footer end-->
     @*</div>*@
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
@@ -120,10 +123,18 @@
         <script src="~/js/site.min.js" asp-append-version="true"></script>
         <script src="~/js/imagePreview.js"></script>
     </environment>
+    <script>
+        $(document).ready(function () {
+            $("#cart-icon").click(function () {
+                $(".cart-container").slideToggle(500, function () {
+                });
+            })
+        });
+    </script>
     @RenderSection("Scripts", required: false)
     <br>
     @*<div class="container">
-        <p class="footer-copyright">&copy; 2019 - Quality Souvenirs</p>
-    </div>*@
+            <p class="footer-copyright">&copy; 2019 - Quality Souvenirs</p>
+        </div>*@
 </body>
 </html>
