Add view of order list for customer

--- a/ASP_Souvenirs/Views/Orders/Create.cshtml
+++ b/ASP_Souvenirs/Views/Orders/Create.cshtml
@@ -9,7 +9,7 @@
 
 @{var user = UserManager.GetUserAsync(User).Result;}
 <h2>Create Order</h2>
-<h3><span class="glyphicon glyphicon-exclamation-sign"></span>Please confirm your order details.</h3>
+<h3><span class="fa fa-exclamation-sign"></span>Please confirm your order details.</h3>
 
 <form asp-action="Create">
     <div class="form-horizontal">
