--- a/ASP_Souvenirs/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/ASP_Souvenirs/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -7,6 +7,7 @@
 
 <div>
     <h4>Change your account settings</h4>
+    <p><a asp-controller="Orders" asp-action="CustomerIndex" asp-area="">View your orders</a></p>
     <hr />
     <div class="row">
         <div class="col-md-3">
