--- a/ASP_Souvenirs/Views/Shared/Components/ShoppingCartViewModel/Default.cshtml
+++ b/ASP_Souvenirs/Views/Shared/Components/ShoppingCartViewModel/Default.cshtml
@@ -12,7 +12,7 @@
 
 <a id="cart-icon"><span class="fa fa-shopping-cart"></span>&nbsp;Shopping Cart&nbsp;<span class="badge">@cartCount</span></a>
 
-<div class="cart-container" style="color: grey;">
+<div class="cart-container" style="color: grey; display: none;">
 
     <h4 style="color:#FF662F;"><span class="fa fa-shopping-cart"></span>&nbsp;Shopping Cart</h4>
 
