--- a/ASP_Souvenirs/Views/Suppliers/Delete.cshtml
+++ b/ASP_Souvenirs/Views/Suppliers/Delete.cshtml
@@ -7,6 +7,7 @@
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
+<h3 style="color: red;"> @TempData["SupplierUsed"] </h3>
 <div>
     <h4>Supplier</h4>
     <hr />
